--- a/client/src/app/styles/globals.css
+++ b/client/src/app/styles/globals.css
@@ -1,8 +1,13 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --foreground: hsl(0 0 94);
+  --text-muted: hsl(218 11 65);
+
+  --block: hsl(222, 36%, 11%);
+  --block-light: hsl(222, 46%, 11%);
+  --block-muted: hsl(222, 44%, 9%);
+  --border-color: hsl(227, 18%, 20%);
 }
 
 @theme inline {
@@ -10,13 +15,6 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 body {
@@ -27,6 +25,8 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100lvh;
+
+  margin-block: 1lvh;
 }
 
 body::before {
@@ -45,4 +45,49 @@ body::after {
   background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.015), rgba(0, 0, 0, 0.1));
   pointer-events: none;
   z-index: 0;
+}
+
+table {
+  align-self: flex-start;
+  background: var(--block);
+  width: 100%;
+}
+
+thead {
+  color: var(--text-muted);
+  border-bottom: 1px solid var(--border-color);
+}
+
+thead th:nth-child(1) {
+  width: 33%;
+}
+
+thead th:nth-child(2) {
+  width: 33%;
+}
+
+thead th:nth-child(1) {
+  width: 33%;
+}
+
+thead tr:nth-child(odd) {
+  background: var(--block-light);
+}
+
+tr>* {
+  text-align: left;
+  border-radius: 4rem;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+tr:hover {
+  background: var(--block-muted);
+}
+
+#log-table {
+  margin-top: 2rem;
+  border: 2px solid var(--border-color);
+  overflow: hidden;
+  border-radius: 20px;
 }
