feat(layout): switch to Open Sans font and update CSS variable references

--- a/client/src/app/styles/globals.css
+++ b/client/src/app/styles/globals.css
@@ -28,8 +28,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-open-sans: var(--font-open-sans);
+  --font-sans-mono: var(--font-open-sans-mono);
 }
 
 .bg-custom-gradient {
