--- a/client/src/app/styles/globals.css
+++ b/client/src/app/styles/globals.css
@@ -77,15 +77,19 @@ thead {
 }
 
 thead th:nth-child(1) {
-  width: 33%;
+  width: 25%;
 }
 
 thead th:nth-child(2) {
-  width: 33%;
+  width: 25%;
 }
 
-thead th:nth-child(1) {
-  width: 33%;
+thead th:nth-child(3) {
+  width: 25%;
+}
+
+thead th:nth-child(3) {
+  width: 25%;
 }
 
 thead tr:nth-child(odd) {
