--- a/client/src/app/styles/globals.css
+++ b/client/src/app/styles/globals.css
@@ -92,7 +92,7 @@ thead th:nth-child(3) {
   width: 25%;
 }
 
-thead tr:nth-child(odd) {
+tbody tr:nth-child(odd) {
   background: var(--block-light);
 }
 
