feat(globals.css): add hover effect for even table rows to enhance user experience

--- a/client/src/app/styles/globals.css
+++ b/client/src/app/styles/globals.css
@@ -106,6 +106,10 @@ tr:hover {
   background: var(--block-muted);
 }
 
+tbody tr:nth-child(even):hover {
+  background: var(--block-light);
+}
+
 #log-table {
   margin-top: 2rem;
   border: 2px solid var(--border-color);
